k8s/wireservers-website.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wireservers-website
  namespace: wireservers
  labels:
    app: wireservers-website
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wireservers-website
  template:
    metadata:
      labels:
        app: wireservers-website
    spec:
      containers:
        - name: wireservers-website
          image: wsws/wireservers-website:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "32Mi"
              cpu: "50m"
            limits:
              memory: "64Mi"
              cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  name: wireservers-website
  namespace: wireservers
spec:
  selector:
    app: wireservers-website
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
