k8s/wsapi.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wsapi
  namespace: wireservers
  labels:
    app: wsapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wsapi
  template:
    metadata:
      labels:
        app: wsapi
    spec:
      containers:
        - name: wsapi
          image: wsws/wsapi:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "250m"
---
apiVersion: v1
kind: Service
metadata:
  name: wsapi
  namespace: wireservers
spec:
  selector:
    app: wsapi
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP
